--- a/base/test-deployment.yaml
+++ b/base/test-deployment.yaml
@@ -20,6 +20,6 @@ spec:
     spec:
       containers:
         - name: deploy-test
-          image: dbgurum/devweb:2.0
+          image: nginx:1.25.4-alpine
           ports:
             - containerPort: 5000
